assets/stylesheets/common/facehash-inline-avatars.scss
.facehash-inline-avatar {
  position: relative;
  display: inline-block;
  line-height: 0;
  vertical-align: middle;
  overflow: hidden;
}

.facehash-inline-overlay {
  pointer-events: none;
}

td.posters .facehash-inline-avatar,
.topic-list-data .facehash-inline-avatar {
  border: none !important;
  box-shadow: none !important;
  outline: none !important;
}

.facehash-inline-avatar > .facehash-inline-svg {
  display: block;
  width: 100%;
  height: 100%;
}

img.facehash-inline-hidden-safe {
  opacity: 0 !important;
}

.facehash-inline-avatar.facehash-inline-hover .facehash-inline-interactive-face {
  transition: transform 300ms cubic-bezier(0.4, 0, 0.2, 1);
  transform-box: fill-box;
  transform-origin: center center;
  will-change: transform;
  backface-visibility: hidden;
  transform:
    rotateX(var(--fh-rx, 0deg))
    rotateY(var(--fh-ry, 0deg))
    translateZ(var(--fh-tz, 0px));
}

.facehash-inline-avatar.facehash-inline-hover.facehash-inline-small .facehash-inline-interactive-face {
  transform:
    translateX(var(--fh-tx, 0px))
    translateY(var(--fh-ty, 0px));
}

img.facehash-inline-hidden-safe:hover + .facehash-inline-avatar.facehash-inline-hover .facehash-inline-interactive-face,
a:hover > img.facehash-inline-hidden-safe + .facehash-inline-avatar.facehash-inline-hover .facehash-inline-interactive-face {
  transform:
    rotateX(0deg)
    rotateY(0deg)
    translateZ(var(--fh-tz, 0px));
}

img.facehash-inline-hidden-safe:hover + .facehash-inline-avatar.facehash-inline-hover.facehash-inline-small .facehash-inline-interactive-face,
a:hover > img.facehash-inline-hidden-safe + .facehash-inline-avatar.facehash-inline-hover.facehash-inline-small .facehash-inline-interactive-face {
  transform:
    translateX(0px)
    translateY(0px);
}

